# fileutils

deduper/: README.md  __init__.py  __main__.py  cli.py  cli_click.py  deduper.bat  deduper.py  deduper.sh  demo.py  install.py  pyproject.toml  requirements.txt  result.txt  scanner.py  setup.bat  setup.py  setup.sh  utils.py
deduper/deduper/: __init__.py  cli.py  core.py
deduper/tests/: __init__.py  test_scanner.py
