[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deduper"
version = "0.1.0"
description = "A CLI tool to find and manage duplicate files"
authors = [{name = "Deduper CLI", email = "deduper@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
deduper = "deduper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deduper*"] 